several fixes for the validation layer

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -111,7 +111,7 @@ MostDslJavaValidator.EntityFieldIntegerMinMustNotGreaterMax=Der Minimalwert darf
 MostDslJavaValidator.EntityFieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
 MostDslJavaValidator.EntityFieldItemMustBeValidIdentifierIncludingWhitespace=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sind erlaubt).
 MostDslJavaValidator.EntityFieldListCheckboxesNeedsMultiple=Nur Listen mit Mehrfachselektionen können aus Checkboxen bestehen.
-MostDslJavaValidator.EntityFieldListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen Eintrag mit der Eigenschaft default enthalten.
+MostDslJavaValidator.EntityFieldListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen als Standard markierten Eintrag enthalten.
 MostDslJavaValidator.EntityFieldListNeedsItem=Die Liste muss mindestens einen Eintrag enthalten.
 MostDslJavaValidator.EntityFieldMandatoryMustNotBeNullable=Pflichtfelder dürfen nicht auch nullable sein.
 MostDslJavaValidator.EntityFieldMaxValueTooLong=Der Maximalwert ist zu lang für die angegebene Feldlänge.
@@ -121,6 +121,7 @@ MostDslJavaValidator.EntityFieldNameMustNotBeReservedZikula=Der Name des Feldes 
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedZoo=Der Name des Feldes ist ein reservierter Bezeichner (_c, _a, _l).
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedSymfony=Der Name des Feldes ist ein reservierter Bezeichner (_controller, _method, _locale).
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedWorkflow=Der Name des Feldes ist ein reservierter Bezeichner (workflowState).
+MostDslJavaValidator.EntityFieldNameMustNotBeReservedDatabaseKeyword=Der Name des Feldes ist ein reserviertes Datenbank-Schlüsselwort.
 MostDslJavaValidator.EntityFieldNameShouldBeLonger=Der Name des Feldes sollte eine Länge von mindestens drei Zeichen haben.
 MostDslJavaValidator.EntityFieldNameShouldStartWithLowerCase=Der Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
 MostDslJavaValidator.EntityFieldNeedsEntity=Das Feld muss einer Entität zugewiesen werden.
@@ -207,7 +208,7 @@ MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedField=Daher dürfe
 MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslJavaValidator.EntityTimestampableNeedsChangeTriggerReference=Das Timestampable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
-MostDslJavaValidator.EntityTimestampableNeedsValidChangeTriggerReference=Das Timestampable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
+MostDslJavaValidator.EntityTimestampableNeedsValidChangeTriggerReference=Das Timestampable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
 MostDslJavaValidator.EntityTranslatableMustNotContainReserved=Entitäten mit übersetzbaren Feldern haben ein zusätzliches Feld für den Sprach-Code
 MostDslJavaValidator.EntityTranslatableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslJavaValidator.EntityTranslatableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
@@ -231,9 +232,9 @@ MostDslJavaValidator.ModelContainerNameShouldBeLonger=Der Name des Model-Contain
 MostDslJavaValidator.ModelContainerNeedsApplication=Der Model-Container muss einer Anwendung zugewiesen werden.
 MostDslJavaValidator.ModelContainerNeedsEntity=Der Model-Container muss mindestens eine Entität enthalten.
 MostDslJavaValidator.ModelContainerNeedsName=Der Model-Container muss einen Namen haben.
-MostDslJavaValidator.ModelContainersMultipleDefaultDataSources=Es solle mindestens einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
+MostDslJavaValidator.ModelContainersMultipleDefaultDataSources=Es darf nur einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
 MostDslJavaValidator.ModelContainersMustBeUnique=Die Namen der Model-Container müssen eindeutig sein.
-MostDslJavaValidator.ModelContainersNoDefaultDataSource=Es darf nur einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
+MostDslJavaValidator.ModelContainersNoDefaultDataSource=Es solle mindestens einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
 MostDslJavaValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen).
 MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField1=Bitte benenne das Feld
 MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField2=\ um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
@@ -281,8 +282,6 @@ MostDslJavaValidator.SubContainerNeedsField=Jeder Untercontainer muss mindestens
 MostDslJavaValidator.SubContainerNeedsParentContainer=Der Kind-Container muss einem Eltern-Container zugewiesen werden.
 MostDslJavaValidator.TabbedPaneNeedsChildContainers=Ein Tabbed Pane muss mindestens zwei Kind-Container enthalten.
 MostDslJavaValidator.TransformObjectNeedsEventListener=Jede Transformation muss einem Event-Listener zugewiesen werden.
-MostDslJavaValidator.TransitionMustNotBeSelfRelation1=Ein Übergang kann nicht zu sich selbst verlinken (Aktion: 
-MostDslJavaValidator.TransitionMustNotBeSelfRelation2=, Übergang: 
 MostDslJavaValidator.TransitionMustNotMultipleBetweenTwoActions=Es darf nicht mehr als einen Übergang zwischen zwei Aktionen geben.
 MostDslJavaValidator.TransitionNameMustBeLonger=Der Name des Übergangs muss eine Länge von mindestens zwei Zeichen haben.
 MostDslJavaValidator.TransitionNameShouldBeLonger=Der Name des Übergangs sollte eine Länge von mindestens vier Zeichen haben.
@@ -294,6 +293,7 @@ MostDslJavaValidator.VarContainerNameMustBeUnique=Die Namen der Variablen-Contai
 MostDslJavaValidator.VarContainerNeedsName=Jeder Variablen-Container muss einen Namen haben.
 MostDslJavaValidator.VarContainerNeedsVariable=Jeder Variablen-Container muss mindestens eine Variable enthalten.
 MostDslJavaValidator.VarContainerSortPositionMustBeUnique=Die Sortierpositionen der Variablen-Container müssen eindeutig sein.
+MostDslJavaValidator.VariableListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen als Standard markierten Eintrag enthalten.
 MostDslJavaValidator.VariableListNeedsItem=Die Liste muss mindestens einen Eintrag enthalten.
 MostDslJavaValidator.VariableNameMustBeLonger=Der Name der Variable muss eine Länge von mindestens zwei Zeichen haben.
 MostDslJavaValidator.VariableNameMustNotReferenceEntity=Eine Variable darf nicht den gleichen Namen haben wie eine Entität.
