renamed translation values of compartment titles

--- a/production/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -114,14 +114,14 @@ WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
-AdminActionsEditPart_title=Admin Controller Aktionen
-UserActionsEditPart_title=User Controller Aktionen
-AjaxActionsEditPart_title=Ajax Controller Aktionen
-CustomActionsEditPart_title=Eigener Controller Aktionen
-ListActionEventsEditPart_title=List Aktion Ereignisse
-DetailActionEventsEditPart_title=Detail Aktion Ereignisse
-EditActionEventsEditPart_title=Edit Aktion Ereignisses
-CustomActionEventsEditPart_title=Custom Aktion Ereignisse
+AdminActionsEditPart_title=Aktionen
+UserActionsEditPart_title=Aktionen
+AjaxActionsEditPart_title=Aktionen
+CustomActionsEditPart_title=Aktionen
+ListActionEventsEditPart_title=Ereignisse
+DetailActionEventsEditPart_title=Ereignisse
+EditActionEventsEditPart_title=Ereignisses
+CustomActionEventsEditPart_title=Ereignisse
 
 CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
