--- a/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -136,12 +136,12 @@ WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
-FieldsEditPart_title=Entität  Felder
-EntityIndexesEditPart_title=Entität  Indexe
-ListFieldItemsEditPart_title=Listen-Feld  Einträge
-IndexItemsEditPart_title=Entitäts-Index  Einträge
-ModuleVariablesEditPart_title=Variablen  Vars
-ListVarItemsEditPart_title=Liste Var  Einträge
+FieldsEditPart_title=Felder
+EntityIndexesEditPart_title=Indexe
+ListFieldItemsEditPart_title=Einträge
+IndexItemsEditPart_title=Einträge
+ModuleVariablesEditPart_title=Variablen
+ListVarItemsEditPart_title=Einträge
 
 CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
