fixed param usage

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -138,8 +138,7 @@ MostDslJavaValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die St
 MostDslJavaValidator.EntityFieldStringMustBeOneOfCountryLanguageHtmlColourPassword=Ein String kann nur eines sein von Land, Sprache, HTML-Farbe und Kennwort.
 MostDslJavaValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Sprachen und Farben müssen auch den nospace-Validator aktivieren.
 MostDslJavaValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
-MostDslJavaValidator.EntityFieldUploadMetaFieldMustNotExist1=Es darf kein Feld namens 
-MostDslJavaValidator.EntityFieldUploadMetaFieldMustNotExist2=\ existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
+MostDslJavaValidator.EntityFieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
 MostDslJavaValidator.EntityFieldUploadNeedsValidFileExtensions=Das Attribut allowedExtensions muss eine kommaseparierte Liste der während dem Upload zu erlaubenden Dateitypen enthalten (Beispiel: gif, jpeg, jpg, png). Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
 MostDslJavaValidator.EntityFieldUploadNeedsValidFileMaxSize=Das Attribut allowedFileSize darf keinen Wert niedriger als 0 haben.
 MostDslJavaValidator.EntityFieldUrlNeedsValidDefaultValue=Der Standardwert für ein URL-Feld muss eine gültige URL sein.
@@ -185,8 +184,7 @@ MostDslJavaValidator.EntityNameMultipleMustNotContainUnderscores=Der Mehrfachnam
 MostDslJavaValidator.EntityNameMultipleShouldBeLonger=Der Mehrfachname der Entität sollte eine Länge von mindestens vier Zeichen haben.
 MostDslJavaValidator.EntityNameMultipleShouldStartWithLowerCase=Der Mehrfachname der Entität sollte mit einem Kleinbuchstaben beginnen.
 MostDslJavaValidator.EntityNameMustBeLonger=Der Name der Entität muss eine Länge von mindestens zwei Zeichen haben.
-MostDslJavaValidator.EntityNameMustNotBeExtensionEntity1=Es darf keine Entität namens 
-MostDslJavaValidator.EntityNameMustNotBeExtensionEntity2=\ geben, da dieser Name durch die entsprechende Erweiterung reserviert ist.
+MostDslJavaValidator.EntityNameMustNotBeExtensionEntity=Es darf keine Entität namens {0} geben, da dieser Name durch die entsprechende Erweiterung reserviert ist.
 MostDslJavaValidator.EntityNameMustNotBeReserved=Der Name der Entität ist ein reservierter Bezeichner
 MostDslJavaValidator.EntityNameMustNotContainUnderscores=Der Name der Entität darf keine Unterstriche enthalten, bitte umbenennen in 
 MostDslJavaValidator.EntityNameMustNotEqualApplication=Eine Entität darf nicht den gleichen Namen haben wie die Anwendung.
@@ -236,15 +234,11 @@ MostDslJavaValidator.ModelContainersMultipleDefaultDataSources=Es darf nur einen
 MostDslJavaValidator.ModelContainersMustBeUnique=Die Namen der Model-Container müssen eindeutig sein.
 MostDslJavaValidator.ModelContainersNoDefaultDataSource=Es solle mindestens einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
 MostDslJavaValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen).
-MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField1=Bitte benenne das Feld
-MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField2=\ um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
+MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField=Bitte benenne das Feld {0} um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
 MostDslJavaValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
 MostDslJavaValidator.RelationshipInheritanceNoCyclesAllowed=Vererbungszyklen sind nicht erlaubt.
-MostDslJavaValidator.RelationshipJoinCSelfNeedsDifferentFieldsForBothSides1=Die Selbstbeziehung darf das Feld 
-MostDslJavaValidator.RelationshipJoinCSelfNeedsDifferentFieldsForBothSides2=\ nicht für sowohl Quelle als auch Ziel referenzieren.
-MostDslJavaValidator.RelationshipJoinCustomNeedsEqualTypes1=Die Felder 
-MostDslJavaValidator.RelationshipJoinCustomNeedsEqualTypes2=\ und 
-MostDslJavaValidator.RelationshipJoinCustomNeedsEqualTypes3=\ müssen den gleichen Typ und die gleiche Länge haben.
+MostDslJavaValidator.RelationshipJoinCSelfNeedsDifferentFieldsForBothSides=Die Selbstbeziehung darf das Feld {0} nicht für sowohl Quelle als auch Ziel referenzieren.
+MostDslJavaValidator.RelationshipJoinCustomNeedsEqualTypes=Die Felder {0} und {1} müssen den gleichen Typ und die gleiche Länge haben.
 MostDslJavaValidator.RelationshipJoinManyToManyNeedsRefClass=Eine Viele-zu-Viele-Beziehung muss das refClass-Attribut definieren.
 MostDslJavaValidator.RelationshipJoinManyToManyRefClassMustBeUnique=Das refClass-Attribut muss eindeutig sein für alle Beziehungen.
 MostDslJavaValidator.RelationshipJoinManyToManyRefClassMustNotEqualEntity=Das refClass-Attribut darf nicht gleich dem Namen einer Entität sein.
@@ -254,17 +248,13 @@ MostDslJavaValidator.RelationshipJoinNeedsSameCascadesBetweenTwoEntities=Zwische
 MostDslJavaValidator.RelationshipJoinNeedsSourceAlias=Jede Join-Beziehung muss ein Quell-Alias haben.
 MostDslJavaValidator.RelationshipJoinNeedsTargetAlias=Jede Join-Beziehung muss ein Ziel-Alias haben.
 MostDslJavaValidator.RelationshipJoinNeedsUniqueIndexByTargetField=IndexBy-Felder müssen eindeutig sein.
-MostDslJavaValidator.RelationshipJoinNeedsValidEditType1=Der Edit-Typ ACTIVE_CHOOSE_PASSIVE_NONE ist nur für Viele-zu-Viele-Beziehungen gültig.
-MostDslJavaValidator.RelationshipJoinNeedsValidEditType2=Der Edit-Typ ACTIVE_EDIT_PASSIVE_NONE ist nur für Viele-zu-Viele-Beziehungen gültig.
+MostDslJavaValidator.RelationshipJoinNeedsValidEditTypeA=Der Edit-Typ ACTIVE_CHOOSE_PASSIVE_NONE ist nur für Viele-zu-Viele-Beziehungen gültig.
+MostDslJavaValidator.RelationshipJoinNeedsValidEditTypeB=Der Edit-Typ ACTIVE_EDIT_PASSIVE_NONE ist nur für Viele-zu-Viele-Beziehungen gültig.
 MostDslJavaValidator.RelationshipJoinNeedsValidIndexByTargetField=Das Attribut indexBy zeigt auf ein ungültiges Feld der Ziel-Entität.
-MostDslJavaValidator.RelationshipJoinNeedsValidSourceField1=Das sourceField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden 
-MostDslJavaValidator.RelationshipJoinNeedsValidSourceField2=-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
-MostDslJavaValidator.RelationshipJoinNeedsValidSourceFieldType1=Das Feld
-MostDslJavaValidator.RelationshipJoinNeedsValidSourceFieldType2=\ muss ein Integer-Feld mit einer Länge von 11 sein.
-MostDslJavaValidator.RelationshipJoinNeedsValidTargetField1=Das targetField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden 
-MostDslJavaValidator.RelationshipJoinNeedsValidTargetField2=-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
-MostDslJavaValidator.RelationshipJoinNeedsValidTargetFieldType1=Das Feld
-MostDslJavaValidator.RelationshipJoinNeedsValidTargetFieldType2=\ muss ein Integer-Feld mit einer Länge von 11 sein.
+MostDslJavaValidator.RelationshipJoinNeedsValidSourceField=Das sourceField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden {0}-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
+MostDslJavaValidator.RelationshipJoinNeedsValidSourceFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
+MostDslJavaValidator.RelationshipJoinNeedsValidTargetField=Das targetField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden {0}-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
+MostDslJavaValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
 MostDslJavaValidator.RelationshipJoinSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
 MostDslJavaValidator.RelationshipJoinSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslJavaValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
@@ -317,14 +307,10 @@ MostDslLinkingDiagnosticMessageProvider.ButFound=\ aber gefunden wurden
 MostDslLinkingDiagnosticMessageProvider.ButFound1Candidate=\ aber gefunden wurde 1 Kandidat.
 MostDslLinkingDiagnosticMessageProvider.Candidates=\ Kandidaten.
 MostDslLinkingDiagnosticMessageProvider.CanNotFindReference=Nicht auffindbare Referenz 
-MostDslLinkingDiagnosticMessageProvider.CanNotReferToMoreThanOnce1=Kann nicht mehr als einmal auf '
-MostDslLinkingDiagnosticMessageProvider.CanNotReferToMoreThanOnce2=' referenzieren.
+MostDslLinkingDiagnosticMessageProvider.CanNotReferToMoreThanOnce=Kann nicht mehr als einmal auf '{0}' referenzieren.
 MostDslLinkingDiagnosticMessageProvider.CanOnlyHold=\ kann nur 
-MostDslLinkingDiagnosticMessageProvider.CanOnlyHold1Reference=\ kann nur 1 Referenz haben
-MostDslLinkingDiagnosticMessageProvider.CouldNotResolveReferenceTo1=Konnte Referenz zu 
-MostDslLinkingDiagnosticMessageProvider.CouldNotResolveReferenceTo2=\ '
-MostDslLinkingDiagnosticMessageProvider.CouldNotResolveReferenceTo3=' nicht auflösen.
+MostDslLinkingDiagnosticMessageProvider.CanOnlyHold1Reference=\ kann nur eine Referenz haben
+MostDslLinkingDiagnosticMessageProvider.CouldNotResolveReferenceTo=Konnte Referenz zu {0} '{1}' nicht auflösen.
 MostDslLinkingDiagnosticMessageProvider.Feature=Das Feature 
 MostDslLinkingDiagnosticMessageProvider.References=\ Referenzen haben
-MostDslLinkingDiagnosticMessageProvider.TooManyMatchesForReferenceTo1=Zu viele Treffer für Referenz zu '
-MostDslLinkingDiagnosticMessageProvider.TooManyMatchesForReferenceTo2='. 
+MostDslLinkingDiagnosticMessageProvider.TooManyMatchesForReferenceTo=Zu viele Treffer für Referenz zu '{0}'.
