activate new model resource using a more readable textual notation

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -17,6 +17,7 @@ newDiagramActionLabel=Anwendungs-Diagramm
 websiteActionLabel=Homepage
 generateActionLabel=Anwendung generieren
 importXmlTableDefinitionLabel=XML-Tabellendefinition importieren
+migrateOldModelLabel=Altes Modell aus 0.5.x migrieren
 openURIActionLabel=URI öffnen...
 openURIActionDescription=Datei über URI öffnen
 openActionLabel=Öffnen...
