overhauled generator integration; removed obsolete usage of modelPath property

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -37,6 +37,7 @@ MostDslJavaValidator.ApplicationNeedsControllerContainer=Die Anwendung muss mind
 MostDslJavaValidator.ApplicationNeedsEmailAddress=Die Anwendung muss eine E-Mail-Adresse haben.
 MostDslJavaValidator.ApplicationNeedsModelContainer=Die Anwendung muss mindestens einen Model-Container enthalten.
 MostDslJavaValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
+MostDslJavaValidator.ApplicationNeedsNoModelPath=Die Eigenschaft für den Modellpfad ist obsolet und muss geleert werden.
 MostDslJavaValidator.ApplicationNeedsPrefix=Die Anwendung muss ein Präfix für seine Datenbank-Tabellen haben.
 MostDslJavaValidator.ApplicationNeedsVersion=Die Anwendung muss eine Version haben.
 MostDslJavaValidator.ApplicationNeedsViewContainer=Die Anwendung muss mindestens einen View-Container enthalten.
