--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
@@ -249,6 +249,7 @@ MostDslQuickfixProvider.ChangeTheSourceContainerToTheNextAvailableOne=Den Quell-
 MostDslQuickfixProvider.ChangeTheTargetContainerToTheNextAvailableOne=Den Ziel-Container zum nächsten verfügbaren verändern
 MostDslQuickfixProvider.ChangeToMultiple=In mehrfach ändern
 MostDslQuickfixProvider.ChangeToNormalEntityByDisablingTheMappedSuperclassFlag=Zu einer normalen Entität verändern durch Deaktivieren des Flags für gemappte Oberklassen
+MostDslQuickfixProvider.ClearModelPath=Modellpfad zurücksetzen
 MostDslQuickfixProvider.Container=Container
 MostDslQuickfixProvider.Controller=Controller
 MostDslQuickfixProvider.CorrectDefaultValue=Standardwert korrigieren
