added vendor field on application level

--- a/production/de.guite.modulestudio.gmf.cust.nl1.de/nl/de/de/guite/modulestudio/gmf/cust/wizard/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.cust.nl1.de/nl/de/de/guite/modulestudio/gmf/cust/wizard/messages_de.properties
@@ -4,8 +4,10 @@ ModulestudioCreationWizardAppSettingsPage_DatabaseTablePrefix=Präfix der Datenba
 ModulestudioCreationWizardAppSettingsPage_EmailAddress=E-Mail-Adresse:
 ModulestudioCreationWizardAppSettingsPage_PleaseEnterApplicationName=Bitte gebe einen Namen für Deine Anwendung ein.
 ModulestudioCreationWizardAppSettingsPage_PleaseEnterPrefix=Bitte gebe ein Präfix für die Datenbanktabellen Deiner Anwendung ein.
+ModulestudioCreationWizardAppSettingsPage_PleaseEnterTheVendorName=Bitte gebe einen Namen für den Anbieter ein.
 ModulestudioCreationWizardAppSettingsPage_PleaseEnterYourEmailAddress=Bitte gebe Deine E-Mail-Adresse ein.
 ModulestudioCreationWizardAppSettingsPage_PleaseEnterYourName=Bitte gebe Deinen Namen ein.
 ModulestudioCreationWizardAppSettingsPage_PleaseEnterYourUrl=Bitte gebe Deine URL ein.
 ModulestudioCreationWizardAppSettingsPage_ThankYou=Vielen Dank.
 ModulestudioCreationWizardAppSettingsPage_Url=URL:
+ModulestudioCreationWizardAppSettingsPage_VendorName=Name des Anbieters:
