--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
@@ -172,6 +172,7 @@ MostDslQuickfixProvider.AddModelContainer=Modell-Container hinzufügen
 MostDslQuickfixProvider.AddMultipleName=Mehrfachname hinzufügen
 MostDslQuickfixProvider.AddName=Name hinzufügen
 MostDslQuickfixProvider.AddNameOfApplicationAuthor=Name des Autors der Anwendung hinzufügen
+MostDslQuickfixProvider.AddNameOfApplicationVendor=Name des Anbieters der Anwendung hinzufügen
 MostDslQuickfixProvider.AddNormalEvent=Normales Ereignis hinzufügen
 MostDslQuickfixProvider.AddNospaceFlag=Das nospace-Flag hinzufügen
 MostDslQuickfixProvider.AddObjectField=Objektfeld hinzufügen
@@ -222,6 +223,7 @@ MostDslQuickfixProvider.AddUploadField=Upload-Feld hinzufügen
 MostDslQuickfixProvider.AddUrlField=URL-Feld hinzufügen
 MostDslQuickfixProvider.AddUserController=User-Controller hinzufügen
 MostDslQuickfixProvider.AddUserField=Benutzer-Feld hinzufügen
+MostDslQuickfixProvider.AddVendor=Anbieter hinzufügen
 MostDslQuickfixProvider.AddVersion=Version hinzufügen
 MostDslQuickfixProvider.AddViewAction=View-Aktion hinzufügen
 MostDslQuickfixProvider.AddViewContainer=View-Container hinzufügen
@@ -231,6 +233,7 @@ MostDslQuickfixProvider.AssignThisViewToTheLeadingEntity=Diese View zur führende
 MostDslQuickfixProvider.AssignToLeadingEntity=An führende Entität zuordnen
 MostDslQuickfixProvider.Capitalise=Groß schreiben
 MostDslQuickfixProvider.ChangeApplicationNameTo=Namen der Anwendung in '{0}' verändern
+MostDslQuickfixProvider.ChangeApplicationVendorTo=Anbieter der Anwendung in '{0}' verändern
 MostDslQuickfixProvider.ChangeEntityMultipleNameTo=Mehrfachnamen der Entität in '{0}' verändern
 MostDslQuickfixProvider.ChangeEntityNameTo=Namen der Entität in '{0}' verändern
 MostDslQuickfixProvider.ChangeFieldNameTo=Namen des Feldes in '{0}' verändern
@@ -255,6 +258,7 @@ MostDslQuickfixProvider.Controller=Controller
 MostDslQuickfixProvider.CorrectDefaultValue=Standardwert korrigieren
 MostDslQuickfixProvider.CorrectName=Name korrigieren
 MostDslQuickfixProvider.CorrectPrefix=Präfix korrigieren
+MostDslQuickfixProvider.CorrectVendor=Anbieter korrigieren
 MostDslQuickfixProvider.CreateAControllerContainerAndAssignTheControllerToIt=Einen Controller-Container erstellen und den Controller zuordnen
 MostDslQuickfixProvider.CreateACustomControllerAndAssignTheActionToIt=Einen eigenen Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateACustomHandlerAndAssignTheEventToIt=Einen eigenen Handler erstellen und das Ereignis zuordnen
@@ -376,6 +380,7 @@ MostDslQuickfixProvider.RepairMultipleNameByRemovingAllUnderscoresAndConvertingT
 MostDslQuickfixProvider.RepairNameByRemovingAllUnderscoresAndConvertingToMixedCase=Namen durch Entfernen aller Unterstriche und Umstellen auf mixed case Schreibweise reparieren
 MostDslQuickfixProvider.RepairNameByRemovingForbiddenCharacters=Namen durch Entfernen nicht erlaubter Zeichen reparieren
 MostDslQuickfixProvider.RepairNameByUsingASimilarNonReservedOne=Namen durch Verwendung eines ähnlichen, nicht reservierten reparieren
+MostDslQuickfixProvider.RepairVendorByRemovingForbiddenCharacters=Anbieter durch Entfernen nicht erlaubter Zeichen reparieren
 MostDslQuickfixProvider.ReplaceByExample=Durch Beispiel ersetzen
 MostDslQuickfixProvider.ReplaceByInteger=Durch Integer ersetzen
 MostDslQuickfixProvider.ReplaceTheDatetimeFieldByAnEquallyNamedIntegerField=Das Zeitstempelfeld '{0}' durch ein gleichnamiges Ganzzahl-Feld ersetzen
@@ -448,4 +453,5 @@ MostDslQuickfixProvider.UseTheFirstEventRemoveTheOthers=Das erste Ereignis verwe
 MostDslQuickfixProvider.UseTheFirstFieldAsTheLeadingOne=Das erste Feld als führendes verwenden
 MostDslQuickfixProvider.UseTheFirstLeadingEntityAsTheLeadingOne=Die erste führende Entität als führende verwenden
 MostDslQuickfixProvider.UseTheFirstModelContainerAsDefaultDataSource=Den ersten Modell-Container als Standarddatenquelle verwenden
+MostDslQuickfixProvider.YourCompanyNameGoesHere=Dein Firmenname kommt hierhin
 MostDslQuickfixProvider.YourFullNameGoesHere=Dein voller Name kommt hierhin
