--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -39,12 +39,15 @@ MostDslJavaValidator.ApplicationNeedsModelContainer=Die Anwendung muss mindesten
 MostDslJavaValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
 MostDslJavaValidator.ApplicationNeedsNoModelPath=Die Eigenschaft für den Modellpfad ist obsolet und muss geleert werden.
 MostDslJavaValidator.ApplicationNeedsPrefix=Die Anwendung muss ein Präfix für seine Datenbank-Tabellen haben.
+MostDslJavaValidator.ApplicationNeedsVendor=Die Anwendung muss einen Anbieter haben.
 MostDslJavaValidator.ApplicationNeedsVersion=Die Anwendung muss eine Version haben.
 MostDslJavaValidator.ApplicationNeedsViewContainer=Die Anwendung muss mindestens einen View-Container enthalten.
 MostDslJavaValidator.ApplicationPrefixIsInvalidIdentifier=Das Präfix muss ein gültiger Bezeichner in Kleinbuchstaben sein (z. B. keine Leerzeichen oder Sonderzeichen).
 MostDslJavaValidator.ApplicationPrefixMustBeLonger=Das Präfix der Anwendung muss eine Länge von mindestens drei Zeichen haben.
 MostDslJavaValidator.ApplicationPrefixShouldBeLonger=Das Präfix der Anwendung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslJavaValidator.ApplicationUrlIsInvalid=Der Wert für die URL der Anwendung muss eine gültige URL sein.
+MostDslJavaValidator.ApplicationVendorIsInvalidIdentifier=Der Anbieter muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen).
+MostDslJavaValidator.ApplicationVendorMustStartWithCapital=Der Anbieter der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne ihn um in 
 MostDslJavaValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem Muster x.y.z entsprechen.
 MostDslJavaValidator.CalculatedFieldNeedsOperand=Das Feld muss sich auf mindestens ein abgeleitetes Feld beziehen.
 MostDslJavaValidator.CompositeContainerNeedsRootPanel=Der Composite-Container muss einem Root-Panel zugewiesen werden.
