added vendor field on application level

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -146,6 +146,8 @@ _UI_NamedObject_name_feature = Name
 _UI_NamedObject_name_description = Der Name dieses Elementes.
 _UI_NamedObject_documentation_feature = Dokumentation
 _UI_NamedObject_documentation_description = Hier kann eine kurze Dokumentation zur Beschreibung des Elementes hinterlegt werden.
+_UI_Application_vendor_feature = Anbieter
+_UI_Application_vendor_description = Der Name des Anbieters dieser Anwendung.
 _UI_Application_author_feature = Autor
 _UI_Application_author_description = Der Name des Autors dieser Anwendung.
 _UI_Application_email_feature = E-Mail
