added new property to support different target core versions

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -601,6 +601,8 @@ _UI_Unknown_feature = Unspezifiziert
 _UI_ApplicationType_WEB_literal = WEB
 _UI_ApplicationType_NATIVE_literal = NATIVE
 _UI_ApplicationType_EMBEDDED_literal = EMBEDDED
+_UI_CoreVersion_ZK136_literal = ZK136
+_UI_CoreVersion_ZK135_literal = ZK135
 _UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
 _UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
 _UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
