check against deletedAt field name for soft-deleteable entities

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -201,6 +201,10 @@ MostDslJavaValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit opti
 MostDslJavaValidator.EntityOwnerPermissionWithoutStandardFields=Entitäten mit Owner Permissions müssen die Standardfelder aktivieren.
 MostDslJavaValidator.EntitySluggableMustNotIncludeSlugField=Entitäten mit Sluggable-Erweiterung können kein Feld namens slug enthalten.
 MostDslJavaValidator.EntitySluggablePositionsMustBeUnique=Die Werte für die Sluggable-Position müssen eindeutig pro Entität sein.
+MostDslJavaValidator.EntitySoftDeleteableMustNotContainReserved=Entitäten mit Soft-Deleteable-Erweiterung haben zusätzliche Felder
+MostDslJavaValidator.EntitySoftDeleteableMustNotContainReservedField=Daher dürfen Deine Felder diese Namen nicht enthalten.
+MostDslJavaValidator.EntitySoftDeleteableMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
+MostDslJavaValidator.EntitySoftDeleteableMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslJavaValidator.EntitySortableFieldMustNotEqualSortableGroup=Die Sortable-Position darf nicht gleichzeitig die Sortable-Gruppe sein.
 MostDslJavaValidator.EntitySortableNeedsOnlyOneFieldForGroup=Nur ein Feld pro Entität kann die Sortable-Gruppe speichern.
 MostDslJavaValidator.EntitySortableNeedsOnlyOneFieldForPosition=Nur ein Feld pro Entität kann die Sortable-Position speichern.
