support uppercase slug style

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -160,6 +160,8 @@ _UI_Application_license_feature = Lizenz
 _UI_Application_license_description = Name der verwendeten Lizenz.
 _UI_Application_prefix_feature = Präfix
 _UI_Application_prefix_description = Präfix für Datenbanktabellen dieser Anwendung.
+_UI_Application_targetCoreVersion_feature = Ziel Core Version
+_UI_Application_targetCoreVersion_description = Zikula-Version, für welche die Anwendung generiert werden soll.
 _UI_Application_interactiveInstallation_feature = Interaktive Installation
 _UI_Application_interactiveInstallation_description = Ob ein normaler oder ein interaktiver Installer verwendet wird.
 _UI_Application_modelPath_feature = Modell-Pfad
@@ -636,6 +638,7 @@ _UI_EntityWorkflowType_NONE_literal = NONE
 _UI_EntityWorkflowType_STANDARD_literal = STANDARD
 _UI_EntityWorkflowType_ENTERPRISE_literal = ENTERPRISE
 _UI_EntitySlugStyle_LOWERCASE_literal = LOWERCASE
+_UI_EntitySlugStyle_UPPERCASE_literal = UPPERCASE
 _UI_EntitySlugStyle_CAMEL_literal = CAMEL
 _UI_EntityTimestampableType_NONE_literal = NONE
 _UI_EntityTimestampableType_UPDATE_literal = UPDATE
