allow module names of only four chars

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -29,7 +29,7 @@ MostDslJavaValidator.ApplicationImportNeedsMaxVersion=Bitte gebe die maximale Ve
 MostDslJavaValidator.ApplicationImportNeedsMinVersion=Bitte gebe die minimale Version für die Abhängigkeit an.
 MostDslJavaValidator.ApplicationImportNeedsName=Du musst den Namen der importierten Anwendung eingeben. 
 MostDslJavaValidator.ApplicationImportNeedsUri=Du musst die URI der Modelldatei der importierten Anwendung eingeben.
-MostDslJavaValidator.ApplicationNameMustBeLonger=Der Name der Anwendung muss eine Länge von mindestens fünf Zeichen haben.
+MostDslJavaValidator.ApplicationNameMustBeLonger=Der Name der Anwendung muss eine Länge von mindestens vier Zeichen haben.
 MostDslJavaValidator.ApplicationNameMustStartWithCapital=Der Name der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne sie um in 
 MostDslJavaValidator.ApplicationNameShouldBeLonger=Der Name der Anwendung sollte eine Länge von mindestens sieben Zeichen haben.
 MostDslJavaValidator.ApplicationNeedsAuthor=Die Anwendung muss einen Autor haben.
