added invalid name to error message for easier findability

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -113,7 +113,7 @@ MostDslJavaValidator.EntityFieldFloatNeedsValidDefaultValue=Der Standardwert für
 MostDslJavaValidator.EntityFieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein Integer-Feld ist 18.
 MostDslJavaValidator.EntityFieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslJavaValidator.EntityFieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
-MostDslJavaValidator.EntityFieldItemMustBeValidIdentifierIncludingWhitespace=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sind erlaubt).
+MostDslJavaValidator.EntityFieldItemMustBeValidIdentifierIncludingWhitespace=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sind erlaubt): {0}.
 MostDslJavaValidator.EntityFieldListCheckboxesNeedsMultiple=Nur Listen mit Mehrfachselektionen können aus Checkboxen bestehen.
 MostDslJavaValidator.EntityFieldListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen als Standard markierten Eintrag enthalten.
 MostDslJavaValidator.EntityFieldListNeedsItem=Die Liste muss mindestens einen Eintrag enthalten.
@@ -240,7 +240,7 @@ MostDslJavaValidator.ModelContainerNeedsName=Der Model-Container muss einen Name
 MostDslJavaValidator.ModelContainersMultipleDefaultDataSources=Es darf nur einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
 MostDslJavaValidator.ModelContainersMustBeUnique=Die Namen der Model-Container müssen eindeutig sein.
 MostDslJavaValidator.ModelContainersNoDefaultDataSource=Es solle mindestens einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
-MostDslJavaValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen).
+MostDslJavaValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
 MostDslJavaValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField=Bitte benenne das Feld {0} um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
 MostDslJavaValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
 MostDslJavaValidator.RelationshipInheritanceNoCyclesAllowed=Vererbungszyklen sind nicht erlaubt.
